# kimari

./: .editorconfig  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: context.rs  decision.rs  lib.rs  rule.rs  value.rs
src/operator/: all.rs  any.rs  equals.rs  mod.rs  not_equals.rs
