[package]
name = "kimari-derive"
description = "Universal DSL for writing rules against the context in Rust."
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/siketyan/kimari.git"
homepage = "https://github.com/siketyan/kimari"
authors = [
    "Natsuki Ikeguchi <me@s6n.jp>",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2.0", features = ["full"] }
